--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Abstractions/PING.Feature.SitecoreSettingsRedirector.Abstractions.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Abstractions/PING.Feature.SitecoreSettingsRedirector.Abstractions.csproj
@@ -44,12 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISitecoreInitializePipelineProcessor.cs" />
-    <Compile Include="ISitecoreStaticSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
