--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/packages.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net471" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net471" />
   <package id="Moq" version="4.9.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net471" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net471" />
   <package id="Sitecore.Abstractions.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.ContentSearch.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
+  <package id="Sitecore.FakeDb" version="1.7.2" targetFramework="net471" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.Logging.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="System.Collections" version="4.0.11" targetFramework="net471" />
