Update the ShowConfig.aspx page to identify which settings have been overridden

--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/packages.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/packages.config
@@ -9,6 +9,7 @@
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net471" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net471" />
   <package id="Sitecore.Abstractions.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
+  <package id="Sitecore.Client.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.ContentSearch.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.FakeDb" version="1.7.2" targetFramework="net471" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
