--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
@@ -72,6 +72,9 @@
       <HintPath>..\..\..\packages\Sitecore.Abstractions.NoReferences.9.0.171219\lib\NET462\Sitecore.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Sitecore.Client, Version=11.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Sitecore.Client.NoReferences.9.0.171219\lib\NET462\Sitecore.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.ContentSearch, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Sitecore.ContentSearch.NoReferences.9.0.171219\lib\NET462\Sitecore.ContentSearch.dll</HintPath>
       <Private>True</Private>
@@ -122,6 +125,8 @@
     <Compile Include="OverrideServiceProviderBuilderTests.cs" />
     <Compile Include="OverridableSettingsTest.cs" />
     <Compile Include="OverridableSitecoreServicesConfiguratorTests.cs" />
+    <Compile Include="ShowConfigTests.cs" />
+    <Compile Include="ShowConfigServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PING.Feature.SitecoreSettingsRedirector.Abstractions\PING.Feature.SitecoreSettingsRedirector.Abstractions.csproj">
