--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.1.0.0\lib\netstandard1.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Sitecore.Client, Version=11.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Sitecore.Client.NoReferences.9.0.171219\lib\NET462\Sitecore.Client.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Sitecore.ContentSearch, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Sitecore.ContentSearch.NoReferences.9.0.171219\lib\NET462\Sitecore.ContentSearch.dll</HintPath>
       <Private>False</Private>
@@ -82,6 +86,11 @@
     <Compile Include="Services\OverridableSettings.cs" />
     <Compile Include="Services\OverridableSitecoreServicesConfigurator.cs" />
     <Compile Include="Services\OverrideServiceProviderBuilder.cs" />
+    <Compile Include="Services\ShowConfigService.cs" />
+    <Compile Include="Sitecore\admin\ShowConfig.aspx.cs">
+      <DependentUpon>ShowConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PING.Feature.SitecoreSettingsRedirector.Abstractions\PING.Feature.SitecoreSettingsRedirector.Abstractions.csproj">
@@ -91,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Custom\PING.Feature.SitecoreSettingsRedirector.config" />
+    <Content Include="Sitecore\admin\ShowConfig.aspx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App_Config\Include\PING.Feature.SitecoreSettingsRedirector.config" />
