--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/packages.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net471" />
+  <package id="Sitecore.Client.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.ContentSearch.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net471" />
