Expanded functions to include all types (except Enum)

--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
@@ -5,7 +5,22 @@
   </configSections>
   <appSettings>
     <add key="xunit.parallelizeTestCollections" value="false" />
-		<add key="SitecoreSetting.overridenSetting" value="app-value" />
+		
+		<add key="SitecoreSetting.overridenStringSetting"    value="app-value" />
+		
+		<add key="SitecoreSetting.overridenBoolSetting"      value="true" />
+		
+		<add key="SitecoreSetting.overridenIntSetting1"      value="11" />
+		<add key="SitecoreSetting.overridenIntSetting2"      value="22kb" />
+		<add key="SitecoreSetting.overridenIntSetting3"      value="" />
+
+		<add key="SitecoreSetting.overridenLongSetting1"     value="11" />
+		<add key="SitecoreSetting.overridenLongSetting2"     value="22kb" />
+		<add key="SitecoreSetting.overridenLongSetting3"     value="" />
+
+		<add key="SitecoreSetting.overridenDoubleSetting"    value="50" />
+
+		<add key="SitecoreSetting.overridenTimespanSetting"  value="0:30:00" />
   </appSettings>
   <sitecore>
 
@@ -18,10 +33,26 @@
 		<settings>
       <setting name="LicenseFile" value="..\..\license.xml" />
 
-			<setting name="intSetting"    value="1" />
-			<setting name="stringSetting" value="test" />
-			<setting name="overridenSetting" value="sitecoreValue" />
+			<setting name="intSetting"      value="1" />
+			<setting name="stringSetting"   value="test" />
+			<setting name="boolSetting"     value="true" />
+			<setting name="doubleSetting"   value="5" />
+			<setting name="timespanSetting" value="00:05:00" />
 			
+			<setting name="overridenStringSetting"    value="sitecoreValue" />
+			
+			<setting name="overridenBoolSetting"      value="false" />
+			
+			<setting name="overridenIntSetting1"      value="1" />
+			<setting name="overridenIntSetting2"      value="2kb" />
+			<setting name="overridenIntSetting3"      value="3" />
+			
+			<setting name="overridenLongSetting1"     value="1" />
+			<setting name="overridenLongSetting2"     value="2kb" />
+			<setting name="overridenLongSetting3"     value="3" />
+			
+			<setting name="overridenDoubleSetting"    value="5" />
+			<setting name="overridenTimespanSetting"  value="1:00:00" />
     </settings>
     <sc.variable name="databaseType" value="Sitecore.Data.DefaultDatabase, Sitecore.Kernel" />
   </sitecore>
