--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
@@ -93,6 +93,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Linq, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Linq.4.1.0\lib\net463\System.Linq.dll</HintPath>
       <Private>True</Private>
