Overnight parking: Setting override using configreader is completed. To add xpath overwrite. Test cases are ready.

--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
@@ -1,59 +1,90 @@
 <configuration>
   <configSections>
-    <section name="sitecore" type="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb"/>
+    <section name="sitecore" type="PING.Feature.SitecoreSettingsRedirector.Configuration.OverrideRuleBasedConfigReader, PING.Feature.SitecoreSettingsRedirector"/>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, Sitecore.Logging"/>
   </configSections>
   <appSettings>
     <add key="xunit.parallelizeTestCollections" value="false"/>
 
-		<add key="SitecoreSetting.overridenStringSetting" value="app-value"/>
+    <add key="SitecoreSetting.overridenStringSetting" value="app-value"/>
 
-		<add key="SitecoreSetting.overridenBoolSetting" value="true"/>
+    <add key="SitecoreSetting.overridenBoolSetting" value="true"/>
 
-		<add key="SitecoreSetting.overridenIntSetting1" value="11"/>
-		<add key="SitecoreSetting.overridenIntSetting2" value="22KB"/>
-		<add key="SitecoreSetting.overridenIntSetting3" value=""/>
+    <add key="SitecoreSetting.overridenIntSetting1" value="11"/>
+    <add key="SitecoreSetting.overridenIntSetting2" value="22KB"/>
+    <add key="SitecoreSetting.overridenIntSetting3" value=""/>
 
-		<add key="SitecoreSetting.overridenLongSetting1" value="11"/>
-		<add key="SitecoreSetting.overridenLongSetting2" value="22KB"/>
-		<add key="SitecoreSetting.overridenLongSetting3" value=""/>
+    <add key="SitecoreSetting.overridenLongSetting1" value="11"/>
+    <add key="SitecoreSetting.overridenLongSetting2" value="22KB"/>
+    <add key="SitecoreSetting.overridenLongSetting3" value=""/>
 
-		<add key="SitecoreSetting.overridenDoubleSetting" value="50"/>
+    <add key="SitecoreSetting.overridenDoubleSetting" value="50"/>
 
-		<add key="SitecoreSetting.overridenTimespanSetting" value="0:30:00"/>
+    <add key="SitecoreSetting.overridenTimespanSetting" value="0:30:00"/>
+    <add key="SitecoreSetting.xPath.JustaName" value="/sitecore/xpathtest/TestObject3/param[0]/text():t8758t8"/>
   </appSettings>
   <sitecore>
 
-		<serviceProviderBuilder type="PING.Feature.SitecoreSettingsRedirector.Services.OverrideServiceProviderBuilder, PING.Feature.SitecoreSettingsRedirector"/>
+    <!--<serviceProviderBuilder type="PING.Feature.SitecoreSettingsRedirector.Services.OverrideServiceProviderBuilder, PING.Feature.SitecoreSettingsRedirector"/>
 
 		<overrideDefaultServiceRegistrations>
 			<override serviceType="Sitecore.Abstractions.BaseSettings, Sitecore.Kernel" implementationType="PING.Feature.SitecoreSettingsRedirector.Services.OverridableSettings, PING.Feature.SitecoreSettingsRedirector" lifetime="Singleton"/>
-		</overrideDefaultServiceRegistrations>
+		</overrideDefaultServiceRegistrations>-->
 
-		<settings>
+    <settings>
       <setting name="LicenseFile" value="..\..\license.xml"/>
 
-			<setting name="intSetting" value="1"/>
-			<setting name="stringSetting" value="test"/>
-			<setting name="boolSetting" value="true"/>
-			<setting name="doubleSetting" value="5"/>
-			<setting name="timespanSetting" value="00:05:00"/>
+      <setting name="intSetting" value="1"/>
+      <setting name="stringSetting" value="test"/>
+      <setting name="boolSetting" value="true"/>
+      <setting name="doubleSetting" value="5"/>
+      <setting name="timespanSetting" value="00:05:00"/>
 
-			<setting name="overridenStringSetting" value="sitecoreValue"/>
+      <setting name="overridenStringSetting" value="sitecoreValue"/>
 
-			<setting name="overridenBoolSetting" value="false"/>
+      <setting name="overridenBoolSetting" value="false"/>
 
-			<setting name="overridenIntSetting1" value="1"/>
-			<setting name="overridenIntSetting2" value="2KB"/>
-			<setting name="overridenIntSetting3" value="3"/>
+      <setting name="overridenIntSetting1" value="1"/>
+      <setting name="overridenIntSetting2" value="2KB"/>
+      <setting name="overridenIntSetting3" value="3"/>
 
-			<setting name="overridenLongSetting1" value="1"/>
-			<setting name="overridenLongSetting2" value="2KB"/>
-			<setting name="overridenLongSetting3" value="3"/>
+      <setting name="overridenLongSetting1" value="1"/>
+      <setting name="overridenLongSetting2" value="2KB"/>
+      <setting name="overridenLongSetting3" value="3"/>
 
-			<setting name="overridenDoubleSetting" value="5"/>
-			<setting name="overridenTimespanSetting" value="1:00:00"/>
+      <setting name="overridenDoubleSetting" value="5"/>
+      <setting name="overridenTimespanSetting" value="1:00:00"/>
     </settings>
+    <xpathtest>
+      <TestObject1 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject, PING.Feature.SitecoreSettingsRedirector.Test">
+        <param name="ctorProp1">Constructor mapping</param>
+        <param name="ctorProp2">$(databaseType)</param>
+        <param name="to2" ref="xpathtest/TestObject2" param1="some1" param2="some2"></param>
+        <Property1>prop1</Property1>
+        <Property2>prop2</Property2>
+      </TestObject1>
+      <TestObject2 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject2, PING.Feature.SitecoreSettingsRedirector.Test">
+        <param name="ctorProp1">$(1)</param>
+        <param name="ctorProp2">ob2NameVar</param>
+        <Property1>prop3</Property1>
+        <Property2>prop4</Property2>
+      </TestObject2>
+
+      <!--overrides below-->
+      <TestObject3 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject, PING.Feature.SitecoreSettingsRedirector.Test">
+        <param name="ctorProp1">I should be overwritten</param>
+        <param name="ctorProp2">$(databaseType)</param>
+        <param name="to2" ref="xpathtest/TestObject4" param1="some1" param2="some2"></param>
+        <Property1>prop1</Property1>
+        <Property2>prop2</Property2>
+      </TestObject3>
+      <TestObject4 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject2, PING.Feature.SitecoreSettingsRedirector.Test">
+        <param name="ctorProp1">$(1)</param>
+        <param name="ctorProp2">ob2NameVar</param>
+        <Property1>prop3</Property1>
+        <Property2>prop4</Property2>
+      </TestObject4>
+    </xpathtest>
     <sc.variable name="databaseType" value="Sitecore.Data.DefaultDatabase, Sitecore.Kernel"/>
   </sitecore>
   <log4net/>
@@ -82,4 +113,7 @@
     </profile>
   </system.web>
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
+</configuration>
