--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/PING.Feature.SitecoreSettingsRedirector.Test.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OverrideXPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OverrideServiceProviderBuilderTests.cs" />
     <Compile Include="OverridableSettingsTest.cs" />
