--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.csproj
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\OverrideRuleBasedConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\OverridableSettings.cs" />
     <Compile Include="Services\OverridableSitecoreServicesConfigurator.cs" />
@@ -61,9 +62,6 @@
       <Project>{6472065C-E9CC-4FBD-A05E-F82066B5C2C9}</Project>
       <Name>PING.Feature.SitecoreSettingsRedirector.Abstractions</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App_Config\Include\PING.Feature.SitecoreSettingsRedirector.config" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Castle.Core">
@@ -91,7 +89,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Sitecore\admin\ShowConfig.aspx" />
+    <Content Include="Sitecore\admin\ShowConfig.aspx">
+      <SubType>ASPXCodeBehind</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
