Added xpath replacement for setting attribute value and internal text. Refactored setting replacement logic.

--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
@@ -21,7 +21,10 @@
     <add key="SitecoreSetting.overridenDoubleSetting" value="50"/>
 
     <add key="SitecoreSetting.overridenTimespanSetting" value="0:30:00"/>
-    <add key="SitecoreSetting.xPath.JustaName" value="/sitecore/xpathtest/TestObject3/param[0]/text():t8758t8"/>
+    <add key="SitecoreSetting.xPath.TestObject3Param1" value="/sitecore/xpathtest/TestObject3/param[1]"/>
+    <add key="SitecoreSetting.xPath.TestObject3Param1.Value" value="t8758t8"/>
+    <add key="SitecoreSetting.xPath.TestObject3Param3" value="/sitecore/xpathtest/TestObject3/param[3]"/>
+    <add key="SitecoreSetting.xPath.TestObject3Param3.Value" value="param1:0g08h08h"/>
   </appSettings>
   <sitecore>
 
