Added support for settings, variables and patches with add, update and remove. Syntax changes in configurations.

--- a/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
+++ b/Feature/SitecoreSettingsRedirector/PING.Feature.SitecoreSettingsRedirector.Test/App.config
@@ -21,19 +21,22 @@
     <add key="SitecoreSetting.overridenDoubleSetting" value="50"/>
 
     <add key="SitecoreSetting.overridenTimespanSetting" value="0:30:00"/>
-    <add key="SitecoreSetting.xPath.TestObject3Param1" value="/sitecore/xpathtest/TestObject3/param[1]"/>
-    <add key="SitecoreSetting.xPath.TestObject3Param1.Value" value="t8758t8"/>
-    <add key="SitecoreSetting.xPath.TestObject3Param3" value="/sitecore/xpathtest/TestObject3/param[3]"/>
-    <add key="SitecoreSetting.xPath.TestObject3Param3.Value" value="param1:0g08h08h"/>
+
+    <add key="SitecorePatch.TestUpdateText.xPath" value="/sitecore/xpathtest/TestObject3/param[1]"/>
+    <add key="SitecorePatch.TestUpdateText.Action" value="[update]text()=patchUpdatenOverrideValue"/>
+
+    <add key="SitecorePatch.TestUpdateAttribute.xPath" value="/sitecore/xpathtest/TestObject3/param[3]"/>
+    <add key="SitecorePatch.TestUpdateAttribute.Action" value="[update]@param1:patchUpdatenAttributeOverrideValue"/>
+
+    <add key="SitecorePatch.TestAdd.xPath" value="/sitecore/settings"/>
+    <add key="SitecorePatch.TestAdd.Action" value="[add]&lt;setting name='patchAddValue' value='patchAddOverrideValue' /&gt;"/>
+
+    <add key="SitecorePatch.TestRemove.xPath" value="/sitecore/xpathtest/TestObject4/Property2"/>
+    <add key="SitecorePatch.TestRemove.Action" value="[remove]"/>
+
+    <add key="SitecoreVariable.VariableOverrideKey" value="overrideValueForVariable"/>
   </appSettings>
   <sitecore>
-
-    <!--<serviceProviderBuilder type="PING.Feature.SitecoreSettingsRedirector.Services.OverrideServiceProviderBuilder, PING.Feature.SitecoreSettingsRedirector"/>
-
-		<overrideDefaultServiceRegistrations>
-			<override serviceType="Sitecore.Abstractions.BaseSettings, Sitecore.Kernel" implementationType="PING.Feature.SitecoreSettingsRedirector.Services.OverridableSettings, PING.Feature.SitecoreSettingsRedirector" lifetime="Singleton"/>
-		</overrideDefaultServiceRegistrations>-->
-
     <settings>
       <setting name="LicenseFile" value="..\..\license.xml"/>
 
@@ -57,6 +60,13 @@
 
       <setting name="overridenDoubleSetting" value="5"/>
       <setting name="overridenTimespanSetting" value="1:00:00"/>
+
+      <setting name="solrcorenames" value="something_$(solrcoreversion)"/>
+ 
+      
+      <setting name="normalVariableSetting" value="$(normalVariableSetting)"/>
+      
+      <setting name="overrideVariableSetting" value="$(VariableOverrideKey)"/>
     </settings>
     <xpathtest>
       <TestObject1 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject, PING.Feature.SitecoreSettingsRedirector.Test">
@@ -68,7 +78,7 @@
       </TestObject1>
       <TestObject2 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject2, PING.Feature.SitecoreSettingsRedirector.Test">
         <param name="ctorProp1">$(1)</param>
-        <param name="ctorProp2">ob2NameVar</param>
+        <param name="ctorProp2">something_123</param>
         <Property1>prop3</Property1>
         <Property2>prop4</Property2>
       </TestObject2>
@@ -83,12 +93,14 @@
       </TestObject3>
       <TestObject4 type="PING.Feature.SitecoreSettingsRedirector.Test.TestObject2, PING.Feature.SitecoreSettingsRedirector.Test">
         <param name="ctorProp1">$(1)</param>
-        <param name="ctorProp2">ob2NameVar</param>
+        <param name="ctorProp2">something_123</param>
         <Property1>prop3</Property1>
         <Property2>prop4</Property2>
       </TestObject4>
     </xpathtest>
     <sc.variable name="databaseType" value="Sitecore.Data.DefaultDatabase, Sitecore.Kernel"/>
+    <sc.variable name="normalVariableSetting" value="normalVariableSettingValue"/>
+    <sc.variable name="VariableOverrideKey" value="orginalVariableTobeOverwritten"/>
   </sitecore>
   <log4net/>
   <system.web>
@@ -115,7 +127,6 @@
       </properties>
     </profile>
   </system.web>
-
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
   </startup>
