Completed dynamic type creation and updated readme

--- a/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/App_Config/Sitecore.config
+++ b/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/App_Config/Sitecore.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<sitecore basetype="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb" xbasetype="Sitecore.Configuration.RuleBasedConfigReader, Sitecore.Kernel">
+<sitecore baseTypeX="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb" baseType="Sitecore.Configuration.RuleBasedConfigReader, Sitecore.Kernel">
+ 
     <settings>
       <setting name="LicenseFile" value="..\..\license.xml"/>
 
