--- a/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/PING.Feature.SitecoreConfigurationOverrideSystem.Test.csproj
+++ b/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/PING.Feature.SitecoreConfigurationOverrideSystem.Test.csproj
@@ -48,7 +48,8 @@
   <ItemGroup>
     <Compile Include="OverridableSettingsTest.cs" />
     <Compile Include="HandleErrorsTest.cs" />
-    <Compile Include="TypeInheritanceTest.cs" />
+    <Compile Include="OverrideIncludeFielsSettingTest.cs" />
+    <Compile Include="DynamicTypeTest.cs" />
     <Compile Include="OverrideSitecorePatchesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OverridableVariablesTest.cs" />
@@ -89,6 +90,9 @@
     </PackageReference>
     <PackageReference Include="Sitecore.Kernel">
       <Version>9.0.171002</Version>
+    </PackageReference>
+    <PackageReference Include="System.CodeDom">
+      <Version>4.5.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
