--- a/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.csproj
+++ b/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2C50A5CA-81FC-417C-AEE0-692C8AD97D19}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PING.Feature.SitecoreSettingsRedirector</RootNamespace>
-    <AssemblyName>PING.Feature.SitecoreSettingsRedirector</AssemblyName>
+    <RootNamespace>PING.Feature.SitecoreConfigurationOverrideSystem</RootNamespace>
+    <AssemblyName>PING.Feature.SitecoreConfigurationOverrideSystem</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -23,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -46,52 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PingSitecoreConfigReader.cs" />
+    <None Include="PingSitecoreConfigOverrideReaderTemplate.cs.disable" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\OverridableSettings.cs" />
-    <Compile Include="Services\OverridableSitecoreServicesConfigurator.cs" />
-    <Compile Include="Services\OverrideServiceProviderBuilder.cs" />
-    <Compile Include="Services\ShowConfigService.cs" />
-    <Compile Include="Sitecore\admin\ShowConfig.aspx.cs">
-      <DependentUpon>ShowConfig.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PING.Feature.SitecoreSettingsRedirector.Abstractions\PING.Feature.SitecoreSettingsRedirector.Abstractions.csproj">
-      <Project>{6472065C-E9CC-4FBD-A05E-F82066B5C2C9}</Project>
-      <Name>PING.Feature.SitecoreSettingsRedirector.Abstractions</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App_Config\Include\PING.Feature.SitecoreSettingsRedirector.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Castle.Core">
-      <Version>4.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Sitecore.Client">
-      <Version>9.0.171002</Version>
-      <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>-->
-    </PackageReference>
-    <PackageReference Include="Sitecore.Kernel">
-      <Version>9.0.171002</Version>
-      <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>-->
-    </PackageReference>
-    <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.ValueTuple">
-      <Version>4.4.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Content Include="Sitecore\admin\ShowConfig.aspx" />
+    <None Include="Resources\PingSitecoreConfigOverrideReaderTemplate.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
