Updates to cope with netstandard 2.0; get reference locations from AppDomain; debug capability for dynamic assembly; correct patch attribution

--- a/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/App_Config/Sitecore.config
+++ b/Feature/SitecoreConfigurationOverrideSystem/PING.Feature.SitecoreConfigurationOverrideSystem.Test/App_Config/Sitecore.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<sitecore configReaderBaseTypeX="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb" configReaderBaseType="Sitecore.Configuration.RuleBasedConfigReader, Sitecore.Kernel">
+<sitecore configReaderBaseTypeX="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb" xmlns:patch="http://www.sitecore.net/xmlconfig/" configReaderBaseType="Sitecore.Configuration.RuleBasedConfigReader, Sitecore.Kernel"  >
  
     <settings>
       <setting name="LicenseFile" value="..\..\license.xml"/>
